--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "start": "vite"
   },
   "dependencies": {
+    "phosphor-react": "^1.4.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
