--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.2.0",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
