--- a/Server/package.json
+++ b/Server/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "^5.3.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
